<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.azimaty.azimatyapp.Fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.azimaty.azimatyapp.Fragments.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.azimaty.azimatyapp.Fragments.AddServiceFragment"
        android:label="@string/AddServiceFragment"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.azimaty.azimatyapp.Fragments.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />  <fragment
    android:id="@+id/navigation_menu"
    android:name="com.azimaty.azimatyapp.Fragments.MenuFragment"
    android:label="@string/menu"
    tools:layout="@layout/fragment_notifications" />
</navigation>