<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/activity_vertical_margin_medium"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginStart="16sp"
    android:layout_marginEnd="16sp"
    android:layout_marginTop="16sp"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner_primary_white_gradient_fill">

    <TextView
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/termscondition_adding"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvTermsandconditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/termTxt"
        android:layout_marginTop="16sp"
         android:textSize="16sp"
        android:lineSpacingMultiplier="1" />


    <Button
        android:id="@+id/agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Agree1"
        android:textColor="@color/white"
        android:background="@drawable/pink_style" />
    <Button
        android:id="@+id/reject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/reject"
        android:textColor="@color/black"
        android:background="@drawable/gray_bacground" />

</LinearLayout>