<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:textDirection="rtl"
    android:layoutDirection="rtl"
    android:layout_margin="16dp"
    tools:context=".Activity.RegisterActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updatepasswardtx"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/darkgrey2"
                android:layout_centerInParent="true"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/close"
                android:background="#00000000"
                android:src="@drawable/close"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"

                />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/passwadlock" />


    <EditText
        android:id="@+id/oldpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/grey_style"
        android:drawableStart="@drawable/passward"
        android:drawablePadding="16dp"
        android:gravity="right"
        android:hint="@string/oldpassword"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@drawable/grey_style"
        android:drawableStart="@drawable/passward"
        android:drawablePadding="16dp"
        android:gravity="right"
        android:layout_marginTop="8dp"

        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reaptedpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:background="@drawable/grey_style"
        android:drawableStart="@drawable/passward"
        android:drawablePadding="16dp"
        android:gravity="right"
        android:hint="@string/reaptedpassword"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:drawablePadding="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/pink_style"
        android:text="@string/sent" />



</LinearLayout>

