<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:textDirection="rtl"
    android:layoutDirection="rtl"
    android:layout_margin="16dp"
    tools:context=".Activity.RegisterActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addervice"
                android:id="@+id/addervicetv"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/darkgrey2"
                android:layout_centerInParent="true"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/close"
                android:background="#00000000"
                android:src="@drawable/close"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"

                />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:src="@drawable/addservicelogo3"
        app:srcCompat="@drawable/addservicelogo3" />


    <EditText
        android:id="@+id/servivename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/servicename"
        android:background="@drawable/grey_style"
        android:drawablePadding="16dp"
        android:inputType="text"
        android:hint="@string/servivename" />

    <TextView
        android:id="@+id/servicetype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/servicetype"
        android:background="@drawable/grey_style"
        android:drawablePadding="16dp"
        android:drawableEnd="@drawable/goservive"
        android:hint="@string/servicetype" />
    <EditText
        android:id="@+id/serviceitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/servicetype"
        android:background="@drawable/grey_style"
        android:drawablePadding="16dp"
        android:inputType="text"
        android:hint="@string/serviceitem" />

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/mobilenumber"
        android:background="@drawable/grey_style"
        android:drawablePadding="16dp"
        android:inputType="number"
        android:hint="@string/phonenumber" />
<!--    <TextView-->
<!--        android:id="@+id/city"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:background="@drawable/grey_style"-->
<!--        android:drawablePadding="16dp"-->
<!--        android:hint="@string/cityname" />-->


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@drawable/spinner_style"
    android:gravity="center_vertical"
    android:padding="@dimen/text_size"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="20dp"
        android:src="@drawable/location"
        android:layout_height="20dp"/>

    <Spinner
        android:id="@+id/citySpinner"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:drawableStart="@drawable/locationicon"
        android:layout_height="wrap_content" />

</LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/Service_on_off"
                android:visibility="gone"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/servichecked"
                    android:layout_width="wrap_content"
                    android:theme="@style/greenswitchStyle"
                    android:checked="false"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/serviceava"
                    android:textColor="@color/Black"
                    android:id="@+id/isserviceon"
                    android:layout_height="wrap_content" />

            </LinearLayout>
    <Button
        android:id="@+id/sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:drawablePadding="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/pink_style"
        android:text="@string/add" />
            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:drawablePadding="16dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone"
                android:background="@drawable/pink_style"
                android:text="@string/save" />

        </LinearLayout>
</androidx.core.widget.NestedScrollView>
</LinearLayout>

