<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textDirection="rtl"
    android:layoutDirection="rtl"
    android:background="@color/white"

    >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutus"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/gray5"
                android:fontFamily="@font/cairo_bold"
                android:layout_centerInParent="true"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back"
                android:background="#00000000"
                android:layout_marginEnd="16dp"
                android:src="@drawable/back"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"

                />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/aboutusimage"
    />
    <TextView
        android:id="@+id/azzz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/Black"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:text="@string/azimaty" />

    <TextView
        android:id="@+id/aboutustext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/aboutustext" />




</LinearLayout>

